--- a/CSS_Color_Markers/CM.css
+++ b/CSS_Color_Markers/CM.css
@@ -4,10 +4,7 @@ h1, h2 {
 
 .container {
     background-color: rgb(255, 255, 255);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 0;
-    padding-right: 0;
+    padding-top: 10px 0;
 }
 
 .marker {
@@ -16,14 +13,32 @@ h1, h2 {
     margin: 10px auto;
 }
 
-.one {
-    background-color: rgb(127, 255, 0);
+.cap {
+    width: 60px;
+    height: 25px;
 }
 
-.two {
-background-color: rgb(0, 127, 255);
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-left: 10px double rgba(0, 0, 0, 0.75);
 }
 
-.three {
-background-color: rgb(255, 0, 127)
+.cap, .sleeve {
+    display: inline-block;
+}
+
+.red {
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
+}
+
+.green {
+background: linear-gradient(#55680D, #71F53E, #116C31);
+box-shadow: 0 0 20px 0 #3B7E20CC;
+}
+
+.blue {
+background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+box-shadow: 0 0 20px 0 hsla(223, 59%, 31%, 0.8);
 }
